test/fail_compilation/test7816b.d
interface Foo
{
    void call(T)(T t) {}
}

class Bar : Foo {}

void test()
{
    Bar bar;
    bar.call(2);
}
